day7/securitygroup.tf

resource "aws_security_group" "bastion-host" {
   name = "mysg-bastion"
    vpc_id = aws_vpc.custvpc.id
    description = "allow ssh"
    depends_on = [ aws_vpc.custvpc ]
   ingress {
    description     = "Allow traffic from web layer"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
ingress {
   
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

ingress {
    description     = "Allow traffic from web layer"
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "bastion-host-server-sg"
  }
  
}
